# WDPractice

./: .$结构图.drawio.bkp  .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Midi样本.txt  SignalTranser.h  碎月.txt  结构图.drawio
GUI/: mainwindow.cpp  mainwindow.h
GUI/Widget/: DeviceSelectWidget.cpp  DeviceSelectWidget.h
Midi/: MidiInputReader.cpp  MidiInputReader.h
WDDB/: WDDB.cpp  WDDB.h
附录/: 甘特图.gan
